# aicam-demo

./: .gitattributes  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
apps/: logging_config.py  model_registry.py
apps/ai_worker/: README.md  cpu_detector.py  draw.py
apps/broadcast_overlay/: Cargo.toml
apps/broadcast_overlay/benches/: fill_rect.rs  scoreboard.rs  text.rs
apps/broadcast_overlay/src/: commands.rs  glyphs.rs  lib.rs  plugin.rs
apps/broadcast_overlay/src/layout/: mod.rs  scoreboard.rs
apps/broadcast_overlay/src/renderer/: color.rs  fill_rect.rs  frame.rs  glyph_blit.rs  mod.rs
apps/bus/: __init__.py  broker.py  health.py  publisher.py  subscriber.py
apps/control_api/: __main__.py
apps/control_api/app/: config_store.py  events.py  firewall.py  main.py  media_client.py  models.py  recording_controller.py  replay_controller.py  state.py  system_metrics.py  wifi.py
apps/hailo_postprocess/: Makefile  metadata_export.cpp  yolo26_postprocess.cpp
apps/media_service/: Cargo.toml  README.md
apps/media_service/src/: abr.rs  consumers.rs  devices.rs  frame_export.rs  main.rs  model_registry.rs  object_detection_preview.rs  overlay.rs  pipeline.rs  producer.rs  session.rs
apps/replay_source/: __init__.py  source.py  video_source.py
apps/schemas/: __init__.py  envelope.py  frame_reference.py  game_state.py  object_detections.py  overlay.py  penalties.py  recording.py
apps/telemetry_service/: __init__.py  gamecontroller.py  source.py
apps/ui/: api.js  app.js  index.html  magnifier.js  style.css
apps/ui/pages/: config.js  dashboard.js  detection.js  playback.js  recording.js  streaming.js
config/: teams.json
config/models/: jersey_color_cls.json  landmarks_cpu_1920_yolo26s.json  objects_1120_yolov8s.json  objects_1408_yolo26s.json  objects_640_yolo26m_coco.json  objects_640_yolov8m_coco.json  pose_640_yolov8m.json  robot_type_cls.json
config/sudoers.d/: aicam-firewall  aicam-wifi
config/systemd/: ai-cam-control-api.service  ai-cam-cpu-detector.service  ai-cam-media.service  ai-cam-zmq-broker.service
models/: jersey_color_cls.hef  robot_type_cls.hef
scripts/: apply_firewall_rules.py  apply_wifi_profile.py  install_locally.sh  run_kiosk.sh  start_all.sh  status_all.sh  stop_all.sh
scripts/lib/: install_steps.sh
