[package]
name = "ai-cam-media-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros"] }
chrono = "0.4"
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-pbutils = "0.23"
gstreamer-video = "0.23"
cairo-rs = "0.20"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
zmq = "0.10"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# NV12-native overlay element (aicamnv12overlay) is loaded
# by GStreamer at runtime from GST_PLUGIN_PATH (via the cdylib built
# from this same crate, installed to /opt/aicam-extra-plugins/). We
# pull the crate WITHOUT the `plugin` feature: media_service only
# needs the `layout::ScoreboardState` / `Rgba` / `PenaltyTile` data
# types (for the cairo-side → JSON conversion) - it must NOT link
# the `Nv12Overlay` GObject subclass, because glib would then see
# the same `AicamNv12Overlay` C name registered twice (once via the
# dlopen-loaded .so, once via the in-binary statically-linked copy)
# and panic. Producer → element communication happens through the
# `scoreboard-state-json` GObject property by name, which works on
# a generic `gst::Element` handle.
aicam_broadcast_overlay = { path = "../broadcast_overlay", default-features = false }

[features]
default = []
# When enabled, the streaming branch uses a fakesink instead of
# rtmpsink. Benchmark binaries are a deliberate build-time choice; the
# default release build always streams to a real RTMP receiver.
streaming_benchmark = []

[dev-dependencies]
http = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
